--- a/apps/docs/content/docs/react/installation.mdx
+++ b/apps/docs/content/docs/react/installation.mdx
@@ -16,5 +16,5 @@ Choose your preferred package manager to install `@stepperize/react`:
 ## Next Steps
 
 - [My first stepper](/docs/react/my-first-stepper)
-- [API References](/docs/react/api-references/define)
+- [API Reference – defineStepper](/docs/react/api-references/define) and [Primitives](/docs/react/api-references/primitives)
 - [Examples](/docs/react/examples)
