--- a/apps/docs/content/docs/react/api-references/define.mdx
+++ b/apps/docs/content/docs/react/api-references/define.mdx
@@ -3,7 +3,7 @@ title: Define
 description: Create a fully-typed stepper with defineStepper
 ---
 
-`defineStepper` creates a stepper from your step definitions. It takes only the steps array and returns typed components and hook.
+`defineStepper` creates a stepper from your step definitions. You pass one object per step (as separate arguments). It returns typed `Stepper` (primitives), `Scoped`, `useStepper`, and `steps`.
 
 ## Basic usage
 
@@ -24,7 +24,7 @@ Each step must have a unique `id`. You can add any custom properties (`title`, `
 | Property | Type | Description |
 | -------- | ---- | ----------- |
 | `steps` | `Steps` | The array of step objects you passed |
-| `useStepper` | `(props?) => Stepper` | Hook for state, navigation, lookup, flow, metadata ([Hook](./hook)) |
+| `useStepper` | `(config?) => Stepper` | Hook for state, navigation, lookup, flow, metadata. Optional config: `initialStep`, `initialMetadata` ([Hook](./hook)) |
 | `Scoped` | `Component` | Provider for stepper context ([Scoped](./scoped)) |
 | `Stepper` | `StepperPrimitives<Steps>` | Type-safe UI primitives ([Primitives](./primitives)) |
 
