--- a/apps/docs/content/docs/react/api-references/schema-validation.mdx
+++ b/apps/docs/content/docs/react/api-references/schema-validation.mdx
@@ -3,9 +3,7 @@ title: Schema Validation
 description: Learn how to validate your stepper with any schema library
 ---
 
-Stepperize provides a way to add schemas to your steps with any schema library. This is very useful for working with forms and libraries such as React Hook Form, Conform, etc.
-
-Let's see how we can create our validation schemas and have them within our stepper.
+You can attach a schema (or any validation shape) to each step as a custom property. Stepperize does not run validation; you read the schema (e.g. `stepper.state.current.data.schema`) and use it with React Hook Form, Conform, Zod, etc. Below: examples with Zod, ValiBot, and ArkType.
 
 ## Zod
 
